--- a/bitsmart/frontend/package.json
+++ b/bitsmart/frontend/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.6",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
+    "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -35,6 +37,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@types/papaparse": "^5.3.14",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
