feat(frontend): handle dotenv

--- a/bitsmart/compose.prod.yaml
+++ b/bitsmart/compose.prod.yaml
@@ -19,3 +19,4 @@ services:
     environment:
       PORT: ${CLIENT_PORT}
       NGINX_PORT: ${CLIENT_PORT}
+      NG_APP_PREDICT_API: ${PREDICT_API}
