feat(backend): integrated ML model

--- a/bitsmart/backend/requirements.txt
+++ b/bitsmart/backend/requirements.txt
@@ -4,7 +4,10 @@ flask_cors
 gunicorn
 itsdangerous
 Jinja2
+joblib
 MarkupSafe
+pandas
 python-dotenv
+scikit-learn==1.2.2
 Werkzeug
 yahoofinancials
