--- a/bitsmart/compose.yaml
+++ b/bitsmart/compose.yaml
@@ -7,6 +7,7 @@ services:
       target: development
     environment:
       CLIENT_DOMAIN: ${CLIENT_DOMAIN}
+      MODEL_PATH: ${MODEL_PATH}
     develop:
       watch:
         - action: sync
