fix(backend): modified file structure for deployment

--- a/bitsmart/backend/Dockerfile
+++ b/bitsmart/backend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
-CMD ["python", "src/app.py"]
+CMD ["python", "main.py"]
 
 FROM development as production
-CMD ["gunicorn", "-w", "2", "-c", "src/config.py", "--chdir", "src", "app:app"]
+CMD ["gunicorn", "-w", "2", "-c", "src/config.py", "main:app"]
